removed dead links

--- a/app/views/home/includes/_founders.erb
+++ b/app/views/home/includes/_founders.erb
@@ -185,7 +185,7 @@
   <div class="pr-details">
     <p>BenVarım projesinin teknik liderliğini yürüten Yiğit Boyar, ABD Silikon Vadisi'nde başarılı bir sosyal ağ start-up'ında çalışmaktadır ve bu alanda 5 yılı aşkın bir tecrübeye sahiptir.</p>
     <p>Lise eğitimini Ankara Fen Lisesi'nde tamamlayan Yiğit, bu süreçte bilgisayar biliminde ciddi çalışmalar yapmış, ulusal ve uluslararası alanlarda çeşitli ödüller kazanmıştır. ODTÜ Bilgisayar Mühendisliği'ne başladıktan sonra web teknolojilerine yoğunlaşan Yiğit, ODTÜ Bilgisayar Topluluğu bünyesinde bir çok seminer vermiştir. 2006-2008 yılları arasında ODTÜ Verimlilik Topluluğu'nun yönetim kurulunda yer almaktadır.</p>
-      <p>Aynı zamanda, STK'ların problemlerinin tespit ve çözümüne odaklı, ulusal bir vaka analizi yarışması olan <a href="http://cozumsende.com" target="_blank">Çözüm Sende</a>'nin yaratıcılarındandır.</p>
+      <p>Aynı zamanda, STK'ların problemlerinin tespit ve çözümüne odaklı, ulusal bir vaka analizi yarışması olan Çözüm Sende'nin yaratıcılarındandır.</p>
     <div class="p-other">
       <a href="http://www.linkedin.com/in/yigitboyar" target="_blank" title="LinkedIn profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/linkedin.png" />
@@ -337,7 +337,7 @@
     freelancer olarak  çalışmakta olan Şükrü, aynı zamanda Avrupa elektrik
     elektronik öğrencileri topluluğunun Ankara kolunun başkan yardımcılığı
     görevini sürdürmektedir. Hobileri arasında tango dansı ve yüzme sporu
-    yer almaktadır. <a href="http://www.sukrubezen.com" target="_blank">http://www.sukrubezen.com</a></p>
+    yer almaktadır.</p>
 
 
     <div class="p-other">
