--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -47,7 +47,7 @@
           <% if @project.accepts_random_payment?%>
             <li class="other">
               <%=radio_button_tag "tmp_payment[predefined_payment_id]", "0", (@tmp_payment.predefined_payment_id == 0 ? "selected" : nil)%>
-              <label for="tmp_payment_predefined_payment_id_0">Diğer: </label>
+              <label for="tmp_payment_predefined_payment_id_0" style="padding:5px">Diğer: </label>
 	      <%=text_field_tag "tmp_payment[amount_in_currency]", @tmp_payment.amount_in_currency, :class=> "text-field"%><%=@tmp_payment.currency_sign%>
             </li>
           <% end %>
