--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -2,5 +2,7 @@
   <div class="msg">MENU: <%=link_to "impersonate", admin_impersonate_path%> |
   <%=link_to "kurumlar", admin_organizations_path%> |
   <%=link_to "sayfalar", admin_pages_path%> |
-  <%=link_to "e-postalar", export_emails_path%></div>
+  <%=link_to "e-postalar", export_emails_path%> |
+  <%=link_to "stats", admin_stats_path%></div>
+
 </p>
