--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -79,7 +79,8 @@
                 <%=render :partial => "payment",
                   :locals => {
                     :payments => @payments,
-                    :more => @more
+                    :more => @more,
+                    :show_hidden_names => @show_hidden_names
                   }
                 %>
 
