commits new projects pages

--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -57,7 +57,7 @@
 
   <div class="line">
     <div class="size1of2 column">
-      <%=render :partial => "projects/list_projects",
+      <%=render :partial => "projects/list_projects_condensed",
         :locals => {
           :show_edit_link => false,
           :projects => @top_projects,
