--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -24,7 +24,8 @@
     <div class="f-bottom line">
       <div class="size1of3">
         <div id="footer-logo">benvarim.com</div>
-        <p class="copyright"><small>&copy; Copyright 2010-2011</small></p>
+        <p class="copyright"><small>Daha güzel bir gelecek hayal et! &copy;2010-2023</small></p>
+        <p></p>
       </div>
 
       <div class="size1of3">
