--- a/public/stylesheets/page.css
+++ b/public/stylesheets/page.css
@@ -7,6 +7,11 @@
 }
 
 
+.page-list-view .p-inner {
+    padding: 30px 20px;
+}
+
+
 /*
  *  Navigation
  */
@@ -54,6 +59,7 @@
 }
 
 .p-nav li a.selected {
+    background: #F9f9f9;
     opacity: 1;
     -ms-filter: "alpha(opacity=100)";
     filter: alpha(opacity=100);
@@ -62,7 +68,7 @@
 
 
 .p-content{
-    background: #FFF;
+    background: #F9F9F9;
     -webkit-border-radius: 5px;
     -khtml-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -189,3 +195,104 @@
 .pf-cta{
 
 }
+
+
+
+
+
+
+
+/*
+ * Page Items
+ *
+ * Polaroid like list items to be used in
+ * project, page, organization listing pages
+ * as well as global discovery page
+ */
+
+.p-item {
+
+  -webkit-transition: background 0.3s linear;
+  -moz-transition: background 0.3s linear;
+  -o-transition: background 0.3s linear;
+  transition: background 0.3s linear;
+
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+
+
+  float: left;
+  background: #FFF;
+
+  border: 1px solid #FFF;
+  padding: 5px;
+  width: 200px;
+  height: 310px;
+  overflow: hidden;
+  margin: 0 15px 30px;
+  -moz-box-shadow: 0 0 5px #CCC;
+  -webkit-box-shadow: 0 0 5px #CCC;
+  box-shadow: 0 0 5px #CCC;
+  text-shadow: 0 1px 0 #FFF;
+}
+
+.p-item:hover {
+  background: #EDFAFF;
+  cursor: pointer;
+  /* one day...
+    -moz-transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    -o-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
+  */
+}
+
+
+.pi-img {
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+  margin-bottom: 10px;
+  background: #FFF;
+
+  text-align: center;
+  display:table;
+}
+
+.pi-img-inner{
+  display:table-cell; vertical-align:middle;
+}
+
+.pi-img img {
+  max-width: 200px;
+  max-height: 150px;
+  margin: 0 auto;
+}
+
+.pi-title {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.pi-subtitle {
+  font-size: 11px;
+}
+
+.pi-summary {
+  font-size: 13px;
+  margin-top: 10px;
+}
+
+.pi-more {
+
+}
+
+
+
+
+
+
+
