edit featured blah blahs

--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -4,5 +4,5 @@
   <%=link_to "sayfalar", admin_pages_path%> |
   <%=link_to "e-postalar", export_emails_path%> |
   <%=link_to "stats", admin_stats_path%></div>
-
 </p>
+<%add_page_specific_script "bv.admin"%>
