--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -3,6 +3,7 @@
   <%=link_to "kurumlar", admin_organizations_path%> |
   <%=link_to "sayfalar", admin_pages_path%> |
   <%=link_to "e-postalar", export_emails_path%> |
-  <%=link_to "stats", admin_stats_path%></div>
+  <%=link_to "stats", admin_stats_path%> |
+  <%=link_to "featured", admin_featured_path%></div>
 </p>
 <%add_page_specific_script "bv.admin"%>
