project#goal, organization #facebook, #twitter

--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -28,6 +28,16 @@
           <%= f.text_field :website, :class=> "text-field" %>
         </div>
         <div class="field">
+          <%= f.label :facebook_url %>
+          https://facebook.com/
+          <%= f.text_field :facebook_url, :class=> "text-field" %>
+        </div>
+        <div class="field">
+          <%= f.label :twitter_handle %>
+          https://twitter.com/
+          <%= f.text_field :twitter_handle, :class=> "text-field" %>
+        </div>
+        <div class="field">
           <%= f.label :email %>
           <%= f.text_field :email, :class=> "text-field" %>
         </div>
