--- a/app/views/projects/includes/_subnavigation.erb
+++ b/app/views/projects/includes/_subnavigation.erb
@@ -2,6 +2,7 @@
   <li>
     <%=link_to "Öne Çıkanlar", projects_path, :class => (!@tag ? 'selected' : '')%>
   </li>
+  <% tags = ["Eğitim", "Sağlık"]%>
   <% tags.each do |t| %>
     <li>
       <%=link_to t,projects_by_tag_path(t), :class => (@tag == t ? 'selected' : '')%>
