enables tracking for donation buttons and lightboxes

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -105,6 +105,10 @@ Bv.Config = {
 <!-- end concatenated and minified scripts-->
 
 
+<!-- TypeKit - Styla -->
+<script type="text/javascript" src="http://use.typekit.com/tza2afe.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
 <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet
 change the UA-XXXXX-X to be your site's ID -->
 <script>
