--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -64,7 +64,7 @@
       </div>
 
       <div class="actions">
-        <input type="submit" value="Gönder" name="commit" class="yellow button large">
+        <input type="submit" value="Gönder" name="commit" class="yellow button large button-send-to-paypal">
       </div>
 
       <div class="paypal-desc">
