moves analytics init to head

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -111,8 +111,10 @@ Bv.Config = {
 
 <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet
 change the UA-XXXXX-X to be your site's ID -->
+
 <script>
-var _gaq = [['_setAccount', 'UA-21493934-1'], ['_trackPageview']];
+// initial declaration now lives in header template
+// var _gaq = [['_setAccount', 'UA-21493934-1'], ['_trackPageview']];
 (function(d, t) {
 var g = d.createElement(t),
 s = d.getElementsByTagName(t)[0];
