basic support feature

--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -4,6 +4,8 @@
   <%=link_to "sayfalar", admin_pages_path%> |
   <%=link_to "e-postalar", export_emails_path%> |
   <%=link_to "stats", admin_stats_path%> |
-  <%=link_to "featured", admin_featured_path%></div>
+  <%=link_to "featured", admin_featured_path%> |</div>
+  <%=link_to "test features", admin_features_path%>
+
 </p>
 <%add_page_specific_script "bv.admin"%>
