implements organizations pages

--- a/app/views/projects/_list_projects.html.erb
+++ b/app/views/projects/_list_projects.html.erb
@@ -1,4 +1,4 @@
-<div class="page page-list-view line clearfix" id="projects">
+<div class="page list-view line clearfix" id="projects">
   <div class="p-nav size1of5">
     <%= render 'projects/includes/subnavigation'%>
   </div><!-- subnav -->
