--- a/app/views/layouts/_sidebar_kurum.erb
+++ b/app/views/layouts/_sidebar_kurum.erb
@@ -1,12 +1,5 @@
 <div id="sidebar">
-  <div id="w-yenikayit" class="widget widget-blue">
-    <div class="w-inner">
-      <div class="w-title">Sen de gönüllü ol!</div>
-      <p>İnandığın derneklerin ve vakıfların projelerini yarattığın bağış sayfaları ile destekle, Facebook ve Twitter üzerinden çevrenle paylaş. Topladığın bağışlar ile projelerin başarıya ulaşmasında pay sahibi olmanın keyfini yaşa...</p>
 
-
-      <%=link_to "Gönüllü ol, bağış sayfanı yarat!", :new_page, :class => "button green"%>
-    </div>
-  </div>
+  <%= render 'layouts/widget_create_page'%>
 
 </div><!-- end of #sidebar -->
