--- a/app/views/organizations/includes/_share_options.erb
+++ b/app/views/organizations/includes/_share_options.erb
@@ -1,4 +1,8 @@
 <div id="fb-root"></div>
+<%
+url = url_for(:only_path => false) unless defined?(url)
+twitter_text = "Benvarım!" unless defined?(twitter_text)
+%>
 
 <div class="share-options">
   <ul class="clearfix">
@@ -8,8 +12,8 @@
         href="http://twitter.com/share?via=ben_varim"
         class="twitter-share-button"
         data-count="horizontal"
-        data-text="Destekliyorum! <%= @organization.name %>:"
-        data-url="<% if @support %><%=support_path @support.organization, @support.user, :only_path => false%><% end %>">Tweet</a>
+        data-text="<%=twitter_text%>"
+        data-url="<%=url%>">Tweet</a>
       </li>
 
     <li style="margin-right: 10px">
@@ -18,17 +22,10 @@
 
 
     <li style="width:60px; margin-right: 10px">
-      <g:plusone size="medium" href="<% if @support %><%=support_path @support.organization, @support.user, :only_path => false%><% end %>"></g:plusone>
+      <g:plusone size="medium" href="<%=url%>"></g:plusone>
     </li>
 
-
-    <% if @show_fb_like_send %>
-      <li>
-        <fb:like send="true" layout="button_count" width="165" show_faces="false" href="<%=url_for :only_path => false%>#fb"></fb:like>
-      </li>
-    <% else %>
-      <li><a  target="_blank" name="fb_share" type="button_count">Facebook'ta Paylaş</a></li>
-    <% end %>
+    <li><a  target="_blank" name="fb_share" share_url="<%=url%>" type="button_count">Facebook'ta Paylaş</a></li>
 
   </ul>
 </div>
